=== HEAD

* Merge metaid gem into core_ext.rb and clean it up, so sequel now has no external dependencies (jeremyevans)

* Add Dataset#as, so using a dataset as a column with an alias is not deprecated (jeremyevans)

* Add Dataset#invert, which returns a dataset with inverted HAVING and WHERE clauses (jeremyevans)

* Add blockless filter syntax support (jeremyevans)

* Passing an array to Dataset#order and Dataset#select no longer works, you need to pass multiple arguments (jeremyevans)

* You no longer need to surround array placeholding ? with parantheses when using interpolated strings (jeremyevans)

* Dataset.literal now surrounds the literalization of the members with parentheses (jeremyevans)

* Add echo option (back?) to sequel command line tool, via -E or --echo (jeremyevans)

* Allow databases to have multiple loggers (jeremyevans)

* The sequel command line tool now also accepts a path to a database config YAML file in addition to a URI (mtodd)

* Major update of the postgresql adapter (jdavis, jeremyevans) (#225)

* Make returning inside of a database transaction commit the transaction (ahoward, jeremyevans)

* Dataset#to_table_reference is now protected, and it has a different API (jeremyevans)

* Dataset#join_table and related functions now take an explicit optional table_alias argument, you can no longer include the table alias in the table argument (jeremyevans)

* Aliased and/or qualified columns with embedded spaces can now be specified as symbols (jeremyevans)

* When identifier quoting is enabled, the SQL standard double quote is used by default (jeremyevans)

* When identifier quoting is enabled, quote tables as well as columns (jeremyevans)

* Make identifier quoting optional, enabled by default (jeremyevans)

* Allow Sequel::Database.connect and related methods to take a block that disconnects the database when the block finishes (jeremyevans)

* Add Dataset#unfiltered, for removing filters from dataset (jeremyevans)
