@@ -1,5 +1,7 @@
 === HEAD
 
+* Allow the use of :schema__table___table_alias syntax for tables, similar to the column support (jeremyevans)
+
 * Merge metaid gem into core_ext.rb and clean it up, so sequel now has no external dependencies (jeremyevans)
 
 * Add Dataset#as, so using a dataset as a column with an alias is not deprecated (jeremyevans)
